[package]
name = "bpf"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A VM for eBPF bytecode."
keywords = ["ebpf", "bpf", "vm", "virtual machine"]
documentation = "https://endoli.github.io/bpf.rs"
homepage = "https://github.com/endoli/bpf.rs"
repository = "https://github.com/endoli/bpf.rs"

[dependencies]
